jumbotron gap fix

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,3 +14,7 @@
  *= require_self
  *= require !bootstrap.css.scss
  */
+
+.navbar{
+    margin-bottom: 0;
+}
